--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3000:3000"
+      - "4000:4000"
     networks:
       - mynetwork
   backend:
-    build: ./
+    build: ./backend
     ports:
-      - "4000:4000"
+      - "3000:3000"
     networks:
       - mynetwork
 networks:
