--- a/ansible/playbook/playbook.yml
+++ b/ansible/playbook/playbook.yml
@@ -4,16 +4,11 @@
       become: true
       tasks:
 
-        - name: Importer le backend
-          copy:
-            src: "./backend"
-            dest: "/root/backend"
-
-        - name: Importer le frontend
-          copy:
-            src: "./frontend"
-            dest: "/root/frontend"
-
+        - name: Clone git
+          git:
+            repo: 'https://github.com/fyambos/spotifyapp.git'
+            dest: /root
+            
         - name: Installer Docker
           apt:
             name: docker.io
