--- a/ansible/playbook/playbook.yml
+++ b/ansible/playbook/playbook.yml
@@ -3,30 +3,58 @@
       hosts: all
       become: true
       tasks:
+        - name: Update the apt package index
+          apt:
+            update_cache: yes
+
+        - name: Install packages to allow apt to use a repository over HTTPS
+          apt:
+            name:
+              - ca-certificates
+              - curl
+              - gnupg
+            state: present
+
+        - name: Create directory for Docker's keyring
+          file:
+            path: /etc/apt/keyrings
+            state: directory
+            mode: '0755'
+
+        - name: Add Docker's official GPG key
+          ansible.builtin.get_url:
+            url: https://download.docker.com/linux/ubuntu/gpg
+            dest: /etc/apt/keyrings/docker.asc
+            mode: '0644'
+
+        - name: Add Docker's repository to apt sources
+          ansible.builtin.shell: |
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+        - name: Update the apt package index again
+          apt:
+            update_cache: yes
+
+        - name: Install Docker packages
+          apt:
+            name:
+              - docker-ce
+              - docker-ce-cli
+              - containerd.io
+              - docker-buildx-plugin
+              - docker-compose-plugin
+            state: present
+
+        - name: Enable and start Docker service
+          systemd:
+            name: docker
+            enabled: yes
+            state: started
 
         - name: Clone git
           git:
             repo: 'https://github.com/fyambos/spotifyapp.git'
             dest: /root/spotifyapp
 
-        - name: Installer Docker
-          apt:
-            name: docker.io
-            state: present
-            update_cache: yes
-
-        - name: Installer Docker Compose
-          apt:
-            name: docker-compose
-            state: present
-            update_cache: yes
-
-        - name: Copier docker-compose.yml
-          copy:
-            src: docker-compose.yml
-            dest: /root/docker-compose.yml
-
         - name: Lancer Docker Compose
-          command: docker-compose up -d
-          args:
-            chdir: /root/spotifyapp
+          command: docker-compose -f /root/spotifyapp/docker-compose.yml up
